// Copyright 2020 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package tests.integer64options.message.v1;

import "google/api/annotations.proto";

option go_package = "github.com/google/gnostic/apps/protoc-gen-openapi/examples/tests/enumoptions/message/v1;message";

// Messaging service
service Messaging {
  rpc CreateMessage (Message) returns (Message) {
    option (google.api.http) = {
      post: "/v1/messages/{message_id}"
      body: "*"
    };
  }
}

message Message {
  int64 int64 = 1;
  uint64 uint64 = 2;
  sint64 sint64 = 3;
  fixed64 fixed64 = 4;
  sfixed64 sfixed64 = 5;
}
